# zendesk-api

./: .gitignore  Main.hs  README  Vagrantfile  zendesk-api.cabal
src/: Json.hs  Zendesk.hs
src/Zendesk/: Common.hs  User.hs
vagrant/cookbooks/haskell/recipes/: cabal.rb  ghc.rb
vagrant/cookbooks/haskell/templates/default/: cabal.sh.erb
vagrant/cookbooks/zendesk/recipes/: default.rb
