name:                zendesk-api
version:             0.1.0.0
synopsis:            Zendesk API for Haskell programming language.
-- description:
homepage:            https://github.com/VictorDenisov/zendesk-api
license:             MIT
license-file:        LICENSE
author:              Victor Denisov
maintainer:          denisovenator@gmail.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Zendesk
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <4.6
  -- hs-source-dirs:
  default-language:    Haskell2010
